--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+
+
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,33 +9,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="./styles/styles.css" rel="stylesheet">
   </head>
+
+
   <body>
+
+
     <div class="container">
+
+        <!-- First row containing title text -->
         <div class="row">
             <div class="col text-center">
-                <h1>Hangman!</h1>
+                <!-- title text -->
+                <h1 class="title" id="title">Hangman!</h1>
+            </div>
+        </div>
+
+        <!-- Second row containing picture showing users progress with parts of the man -->
+        <div class="row">
+            <div class="col d-flex justify-content-center">
+                <!-- Image of hangman -->
+                <img id="hangImg" class="pic" alt="Only hanging station" src="./media/7.png">
+            </div>
+        </div>
+
+        <!-- Third row showcasing the main word the player needs to guess, chances the player has left, and the text input box for the user to guess. -->
+        <div class="row">
+            <div class="col text-center">
+                <!-- Main word the user has to guess -->
+                <h2 hidden id="mainWord">Word</h2>
+                <!-- Chances the user has left -->
+                <h3 hidden id="chances" >Chances</h3>
+                <!-- Guess input box for user -->
+                <label hidden id="guessLabel" for="guessInput">Guess:</label>
+                <input hidden id="guessInput" readonly="true" type="text" title="guess" maxlength="1" >
+                <!-- Submit button for user to submit their guess  -->
+                <button id="submitBtn" class="submitBtn" hidden >Submit</button>
+                <!-- Play button to start game -->
+                <button id="playBtn" class="playBtn"> PLAY </button>
             </div>
         </div>
 
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <img class="pic" alt="Only hanging station" src="./media/1.png">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col text-center">
-                <h2>Word</h2>
-                <h3>Chances</h3>
-                <label for="guessInput">Guess:</label>
-                <input id="guessInput">
-            </div>
-        </div>
-
-            
-        <div class="row">
-            <div class="col d-flex justify-content-center mt-1">
-                <button>test</button>
+                <!-- Hint button for user to help when stuck -->
+                <button id="hintBtn" class="hintBtn" hidden >Get Hint</button>
             </div>
         </div>
     </div>
