--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <input hidden id="guessInput" readonly="true" type="text" title="guess" maxlength="1" >
                 <!-- Submit button for user to submit their guess  -->
                 <button id="submitBtn" class="submitBtn" hidden >Submit</button>
+                <h4 id="hintTxt" class="hintTxt" hidden >Hint</h4>
                 <!-- Play button to start game -->
                 <button id="playBtn" class="playBtn"> PLAY </button>
             </div>
